[package]
name = "crypt-ids"
version = "0.2.0"
authors = ["boogerlad <boogerlad@gmail.com>"]
edition = "2018"
repository = "https://github.com/boogerlad/crypt-ids"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fpe = "0.3.1"
bs58 = "0.3.1"
aes = "0.5.0"
wasm-bindgen = "0.2"
js-sys = "0.3.44"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2", "--enable-mutable-globals"]
# https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802