[package]
name = "crypt-ids"
version = "1.0.0"
authors = ["boogerlad <boogerlad@gmail.com>"]
edition = "2018"
repository = "https://github.com/boogerlad/crypt-ids"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fpe = "0.5.0"
bs58 = "0.4.0"
aes = "0.7.4"
wasm-bindgen = "0.2.75"
js-sys = "0.3.52"